# EC552_HW1

./: LICENSE  README.md  build_refer_table.py  cello_pre_work.py  json_analyze_round1.py  json_analyze_round2.py  json_detect.py  json_parse.py  linear_coeff_gridsearch.py  main.py  pyproject.toml  screen_visuals.py
cello/input/: Eco1C1G1T1.input.range_p+-0.5_0.5_r+6.5_0.5.json  Eco1C1G1T1.input.range_p+-0.5_0.5_r+6_0.5.json  Eco1C1G1T1.input.range_p+-1_0.5_r+5.5_0.5.json  Eco1C1G1T1.input.range_p+-1_0.5_r+6.5_0.5.json  Eco1C1G1T1.input.range_p+-1_0.5_r+6_0.5.json  Eco1C1G1T1.input.range_p+0.5_0.5_r+5_0.5.json  Eco1C1G1T1.input.range_p+0.5_0.5_r+6.5_0.5.json  Eco1C1G1T1.input.range_p+0.5_0.5_r+7_0.5.json  Eco1C1G1T1.input.range_p+0_0.5_r+6_0.5.json  Eco1C2G2T2.UCF.json  Eco1C2G2T2.input.range_p+-0.5_0.5_r+5.5_0.5.json  Eco1C2G2T2.input.range_p+-0.5_0.5_r+6.5_0.5.json  Eco1C2G2T2.input.range_p+-1_0.5_r+5_0.5.json  Eco1C2G2T2.input.range_p+-1_0.5_r+6_0.5.json  Eco1C2G2T2.input.range_p+-1_0.5_r+7_0.5.json  Eco1C2G2T2.input.range_p+0.5_0.5_r+5.5_0.5.json  Eco1C2G2T2.input.range_p+0.5_0.5_r+6.5_0.5.json  Eco1C2G2T2.input.range_p+0.5_0.5_r+6_0.5.json  Eco1C2G2T2.input.range_p+0_0.5_r+5.5_0.5.json  Eco1C2G2T2.input.range_p+0_0.5_r+5_0.5.json  Eco1C2G2T2.input.range_p+0_0.5_r+6.5_0.5.json  cello_scores_round_2.csv  custom_input.input.json  reference_table.csv
cello/output/: and.xml  and_activity.csv  and_eugeneScript.eug  and_gate_export.dot  and_outputNetlist.json  and_toxicity.csv  (+4 more)
screen_data/: cello_scores_round_1.csv  cello_scores_round_2.csv  top_scores_round_1.csv
(+611 files in other folders)
